create calorie counter table

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <div id="appTitle" class="bg-red"></div>
     <p id="appDescription"></p>
 
+    <div id="app">
+
+    </div>
+
     <script src="dist/bundle.js"></script>
   </body>
 </html>
