revise from scratch

--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <title>Simple Counter</title>
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
-  <body>
+  <body class="san-serif pa4 f3">
     <div id="appTitle" class="bg-red"></div>
     <p id="appDescription"></p>
-
-    <div id="app">
-
-    </div>
+    <div id="app"></div>
 
     <script src="dist/bundle.js"></script>
   </body>
